[project]
name = "agenticai-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "plotly>=6.9.0",
    "python-decouple>=3.8",
    "streamlit>=1.60.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
